--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
-  background: var(--color-blue);
-  color: var(--color-white);
+  background: var(--color-bg-dark);
+  color: var(--color-text-on-dark);
   padding: 3rem 1.25rem 0;
 }
 
@@ -53,7 +53,7 @@
 
 .linkList a,
 .contactList a {
-  color: var(--color-white);
+  color: var(--color-text-on-dark);
   opacity: 0.95;
 }
 
@@ -68,7 +68,7 @@
 
 .copy {
   padding: 1rem 1.25rem;
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-top: 1px solid var(--color-graphite);
   text-align: center;
 }
 
